deployment/templates/inoa/fleet-registry-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleet-registry-service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fleet-registry-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fleet-registry-service
    spec:
      containers:
        - name: fleet-registry-service
          image: ghcr.io/inoa-io/fleet-registry-service
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
            - name: managment
              containerPort: 8090
          startupProbe:
            httpGet:
              path: /endpoints/health
              port: managment
            initialDelaySeconds: 10
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 120
          readinessProbe:
            httpGet:
              path: /endpoints/health/readiness
              port: managment
          livenessProbe:
            httpGet:
              path: /endpoints/health/liveness
              port: managment
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: false
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 5
