deployment/templates/inoa/fleet-registry-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet-registry-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: fleet-registry-service
